--- a/TaskManager/index.html
+++ b/TaskManager/index.html
@@ -23,6 +23,10 @@
             <h3>Your Pending Tasks</h3>
 
             <button type="button" id="hideDetails"> Hide Details</button>
+
+            <div id="pending-tasks">
+                <!-- JS will render tasks here-->
+            </div>
         </section>
 
         <section id="formInfo"  class="info">
@@ -36,22 +40,22 @@
 
                     <div class="mb-3">
                         <label for="title" class="form-label">Title</label>
-                        <input type="text" class="form-control" placeholder="Title">
+                        <input id="txtTitle"  type="text" class="form-control" placeholder="Title">
                     </div>
 
                     <div class="mb-3">
                         <label for="description" class="form-label">Description</label>
-                        <textarea type="text" class="form-control" placeholder="Description"> </textarea>
+                        <textarea id="txtDescription"  type="text" class="form-control" placeholder="Description"> </textarea>
                     </div>
 
                     <div class="mb-3">
                         <label for="dueDate" class="form-label">Due Date</label>
-                        <input type="datetime-local" class="form-control" placeholder="Due Date">
+                        <input id="selDueDate" type="datetime-local" class="form-control" placeholder="Due Date">
                     </div>
 
                     <div class="mb-3">
                         <label for="status" class="form-label">Status</label>
-                        <select title="status" name="status" type="text" class="form-select" placeholder="Status">
+                        <select id="selStatus" title="status" name="status" type="text" class="form-select" placeholder="Status">
                             <option value=""> --Please Choose An Option-- </option>
                             <option> New</option>
                             <option> In Progress</option>
@@ -62,26 +66,26 @@
 
                     <div class="mb-3"></div>
                     <label for="budget" class="form-label">Budget</label>
-                    <input type="number" class="form-control" placeholder="Budget">
+                    <input id="txtBudget" type="number" class="form-control" placeholder="Budget">
                 </div>
 
                 <div class="mb-3">
                     <label for="color" class="form-label">Color</label>
-                    <input type="color" class="form-control" placeholder="Color">
+                    <input id="selColor" type="color" class="form-control" placeholder="Color">
                 </div>
 
                 <button id="btnSave" type="button" class="save.btn"> Save Tasks</button>
 
                 </div>
             </form> 
-            
+
         </section>
 
     </main>
 
     <script src="https://code.jquery.com/jquery-3.6.4.min.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+    <script src="./scripts/task.js"></script>
     <script src="./scripts/app.js"></script>
 </body>
 <footer>
@@ -98,6 +102,9 @@
     status
     budget
     color
+
+    HTTP Verbs/Methods
+    HTTP Status Codes
 -->
 
 
